--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,19 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
+
+plugins {
+	id 'java'
+}
+
+jar {
+	manifest {
+		attributes(
+				'Main-Class': 'com.gokul.lifestyleapp.LifestyleappApplication'
+		)
+	}
+}
+
 tasks.named('test') {
 	useJUnitPlatform()
 }
