--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 }
 
 jar {
+	enabled = false
 	manifest {
 		attributes 'Main-Class': 'com.gokul.lifestyleapp.LifestyleappApplication'
 	}
